<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.Activities.CounterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">



        <LinearLayout
            android:id="@+id/gender_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/gender_male_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_gender_male"
                android:background="@color/male"
                />

            <ImageButton
                android:id="@+id/gender_female_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_gender_female"
                android:background="@color/white"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/age_checkbox_container"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            >

            <CheckBox
                android:id="@+id/age_1_checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/age_span_1"
                style="@style/AppTheme.Checkbox"

                />
            <CheckBox
                android:id="@+id/age_2_checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/age_span_2"
                style="@style/AppTheme.Checkbox"
                />
            <CheckBox
                android:id="@+id/age_3_checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/age_span_3"
                style="@style/AppTheme.Checkbox"
                />
            <CheckBox
                android:id="@+id/age_4_checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/age_span_4"
                style="@style/AppTheme.Checkbox"
                />
            <CheckBox
                android:id="@+id/age_5_checkbox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/age_span_5"
                style="@style/AppTheme.Checkbox"
                />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        >


        <LinearLayout
            android:id="@+id/inc_dec_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/dec_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:text="@string/decrement"
                android:theme="@style/AppTheme.ColoredButton"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:background="@color/medium_grey"
                />

            <Button
                android:id="@+id/inc_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="50sp"
                android:text="@string/increment"
                android:theme="@style/AppTheme.ColoredButton"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/background_visitor_count"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textSize="24sp"
                android:textColor="@color/light_grey"
                android:text="@string/current_guest_amount"
                android:gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:gravity="center"
                >

                <TextView
                    android:id="@+id/current_guest_amount_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:gravity="top"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text=" / "
                    android:textSize="40sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="top"

                    />
                <TextView
                    android:id="@+id/total_guest_amount_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="0"
                    android:textColor="@color/light_grey"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:gravity="top"

                    />

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>




</LinearLayout>
